--- a/distribution/css/custom.css
+++ b/distribution/css/custom.css
@@ -13,9 +13,10 @@
 
 .KimsFont {
     font-family: 'Shadows Into Light', cursive;
-    float: left;
-    margin-left: -50%;
-    padding-right: 600px;
+    /* margin-right: 40%; */
+    /* float: left;
+    margin-right: 100%; */
+    margin-top: 25%;
 }
 
 .largeText {
