--- a/distribution/css/custom.css
+++ b/distribution/css/custom.css
@@ -7,13 +7,18 @@
     height: 466.66px;
 } */
 
-.portImgRound {
-    border-radius: 50%;
+.quoteImg {
+    width: 100%;
+}
+
+.carImg {
+    height: 300px;
+    width: 350px;
 }
 
 .KimsFont {
     font-family: 'Shadows Into Light', cursive;
-    margin-top: 55%;
+    font-size: 32px;
 }
 
 .largeText {
@@ -22,4 +27,58 @@
 
 .heading {
     font-size: 46px;
+}
+
+.card-4 {
+    -webkit-box-shadow: 5px 5px 33px 5px #000000;
+    box-shadow: 5px 5px 33px 5px #000000;
+    margin-top: 15%;
+    margin-left: 20%;
+    width: 450px;
+}
+
+.card-4:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.box {
+    margin-top: 50% !important;
+}
+
+.ludwig {
+    position: relative;
+    padding-left: 1em;
+    border-left: 0.2em solid #4d91b3;
+    font-family: 'Roboto', serif;
+    font-size: 2.4em;
+    line-height: 1.5em;
+    font-weight: 100;
+}
+
+.ludwig:before,
+.ludwig:after {
+    content: '\201C';
+    font-family: 'Sanchez';
+    color: #4d91b3;
+}
+
+.ludwig:after {
+    content: '\201D';
+}
+
+.groucho footer {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 1.2em;
+    font-weight: 700;
+    color: #d3d3cf;
+    float: right;
+}
+
+.groucho footer:before {
+    content: '\2015';
+}
+
+.carImg1 {
+    background-image: url('../finalImages/20200109_1528231.jpg');
+    background-size: cover;
 }
