--- a/distribution/css/custom.css
+++ b/distribution/css/custom.css
@@ -21,6 +21,13 @@
     font-size: 32px;
 }
 
+@media only screen and (max-width: 600px) {
+    .KimsFont {
+        font-family: 'Shadows Into Light', cursive;
+        font-size: 20px;
+    }
+}
+
 .largeText {
     font-size: 30px;
 }
