--- a/distribution/css/custom.css
+++ b/distribution/css/custom.css
@@ -26,6 +26,18 @@
         font-family: 'Shadows Into Light', cursive;
         font-size: 20px;
     }
+    .quoteImg {
+        height: 200px !important;
+        width: 250px !important;
+    }
+    .card,
+    .card-4 {
+        height: 200px !important;
+        width: 250px !important;
+    }
+    .heading {
+        font-size: 28px !important;
+    }
 }
 
 .largeText {
