--- a/distribution/css/custom.css
+++ b/distribution/css/custom.css
@@ -34,9 +34,16 @@
     .card-4 {
         height: 200px !important;
         width: 250px !important;
+        text-align: center !important;
     }
     .heading {
         font-size: 28px !important;
+    }
+    .ludwig {
+        font-size: 1.25em !important;
+    }
+    .groucho footer {
+        font-size: .75em !important;
     }
 }
 
@@ -68,7 +75,7 @@
     position: relative;
     padding-left: 1em;
     border-left: 0.2em solid #4d91b3;
-    font-family: 'Roboto', serif;
+    font-family: 'Dancing Script', cursive;
     font-size: 2.4em;
     line-height: 1.5em;
     font-weight: 100;
@@ -77,7 +84,7 @@
 .ludwig:before,
 .ludwig:after {
     content: '\201C';
-    font-family: 'Sanchez';
+    font-family: 'Dancing Script', cursive;
     color: #4d91b3;
 }
 
